feat(platform): unify agent runtime and fitness workflows